# MLBPrediction2026

./: .emdash.json  .env.example  .gitignore  AGENTS.md  ANALYSIS_2026-03-21.md  AUDIT_REPORT_2026-03-24.md  DEEP_AUDIT_2026-03-24.md  EXPERIMENT_REVIEW_2026-03-21.md  FEATURE_GAP_ANALYSIS_2026-03-25.md  FEATURE_RESEARCH_ROUND2_2026-03-25.md  HANDOFF_2026-03-20.md  MODEL_AUDIT_FULL_2026-03-25.md  MODEL_COMPARISON_TRACKER.md  README.md  REMAINING.md  ResearchInformation.md  TODO.md  pyproject.toml  start-dev.ps1
.factory/: init.sh  services.yaml
AutoResearch/: AUTORESEARCH_HANDOFF.md  AUTORESEARCH_SESSION_REVIEW.md  README.md  __init__.py  agent.py  experiments.db  launcher.py  llm_client.py  program.md  train.py
OddsScraper/: audit_oddsportal_vs_legacy.py  migrate_db.py  oddsportal_scraper.py  run_2025_2026.py  run_2026.py  run_betus_team_totals.py  run_full.py  run_oddsportal_backfill.py  run_oddsportal_event_scan.py  scraper.py  test_betus_team_totals.py  test_oddsportal_scraper.py  test_scraper.py
archive/: README.md
config/: autoresearch_clean_post_bullpen_40.yaml  autoresearch_drawdown_100.yaml  autoresearch_early_80.yaml  autoresearch_fanduel_60.yaml  autoresearch_model_120.yaml  autoresearch_policy_100.yaml  autoresearch_recent_2024_2025_sane_200.yaml  autoresearch_recent_2024_2025_sane_60.yaml  autoresearch_recent_2024_sane_40.yaml  autoresearch_recent_80.yaml  autoresearch_recent_anchor_2021_60.yaml  autoresearch_recent_anchor_2023_60.yaml  autoresearch_robustness_30.yaml  autoresearch_walk_forward.yaml  autoresearch_walk_forward_drawdown.yaml  (+1 more)
src/: db.py  (+2 more)
(+879 files in other folders)
