[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlbprediction2026"
version = "0.1.0"
description = "MLB F5 betting prediction system for the 2026 season."
requires-python = ">=3.11"
dependencies = [
  "pybaseball @ git+https://github.com/jldbc/pybaseball.git",
  "pandas>=2.0",
  "numpy",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "sqlalchemy",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml",
  "python-dotenv",
  "requests",
  "httpx",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]
dashboard = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
